Consultor - refatoracao do codigo